--- a/DAL.Entity/DAL.Entity.csproj
+++ b/DAL.Entity/DAL.Entity.csproj
@@ -79,6 +79,10 @@
     <Compile Include="Migrations\202004271451138_ConfiguredTrainerAndCourseTables.Designer.cs">
       <DependentUpon>202004271451138_ConfiguredTrainerAndCourseTables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004281337516_DropIdAttributesForFKsInModels.cs" />
+    <Compile Include="Migrations\202004281337516_DropIdAttributesForFKsInModels.Designer.cs">
+      <DependentUpon>202004281337516_DropIdAttributesForFKsInModels.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Group.cs" />
@@ -109,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202004271451138_ConfiguredTrainerAndCourseTables.resx">
       <DependentUpon>202004271451138_ConfiguredTrainerAndCourseTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004281337516_DropIdAttributesForFKsInModels.resx">
+      <DependentUpon>202004281337516_DropIdAttributesForFKsInModels.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
