--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Dto\StudentDto.cs" />
     <Compile Include="Dto\TrainerDto.cs" />
     <Compile Include="Interfaces\IService.cs" />
+    <Compile Include="Interfaces\IServiceAsync.cs" />
     <Compile Include="Interfaces\IStudentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\StudentService.cs" />
